<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/main_color"
        tools:context=".app.FinaleFragment">

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:fontFamily="@font/open_sans_semibold"
            android:text="@string/solve"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/img1"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="30dp"
            android:importantForAccessibility="no"
            android:scaleType="centerCrop"
            app:layout_constraintEnd_toStartOf="@+id/img2"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvTitle"
            tools:src="@drawable/image_part_001" />

        <ImageView
            android:id="@+id/img2"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="30dp"
            android:importantForAccessibility="no"
            android:scaleType="centerCrop"
            app:layout_constraintEnd_toStartOf="@+id/img3"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/img1"
            app:layout_constraintTop_toBottomOf="@+id/tvTitle"
            tools:src="@drawable/image_part_002" />

        <ImageView
            android:id="@+id/img3"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="30dp"
            android:importantForAccessibility="no"
            android:scaleType="centerCrop"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/img2"
            app:layout_constraintTop_toBottomOf="@+id/tvTitle"
            tools:src="@drawable/image_part_003" />

        <ImageView
            android:id="@+id/img4"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="30dp"
            android:importantForAccessibility="no"
            android:scaleType="centerCrop"
            app:layout_constraintEnd_toStartOf="@+id/img5"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/img1"
            tools:src="@drawable/image_part_004" />

        <ImageView
            android:id="@+id/img5"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="30dp"
            android:importantForAccessibility="no"
            android:scaleType="centerCrop"
            app:layout_constraintEnd_toStartOf="@+id/img6"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/img4"
            app:layout_constraintTop_toBottomOf="@+id/img2"
            tools:src="@drawable/image_part_005" />

        <ImageView
            android:id="@+id/img6"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="30dp"
            android:importantForAccessibility="no"
            android:scaleType="centerCrop"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/img5"
            app:layout_constraintTop_toBottomOf="@+id/img3"
            tools:src="@drawable/image_part_006" />

        <ImageView
            android:id="@+id/img7"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="30dp"
            android:importantForAccessibility="no"
            android:scaleType="centerCrop"
            app:layout_constraintEnd_toStartOf="@+id/img8"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/img4"
            tools:src="@drawable/image_part_007" />

        <ImageView
            android:id="@+id/img8"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="28dp"
            android:importantForAccessibility="no"
            android:scaleType="centerCrop"
            app:layout_constraintEnd_toStartOf="@+id/img9"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/img7"
            app:layout_constraintTop_toBottomOf="@+id/img5"
            android:src="@drawable/image_part_008" />

        <ImageView
            android:id="@+id/img9"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="30dp"
            android:importantForAccessibility="no"
            android:scaleType="centerCrop"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/img8"
            app:layout_constraintTop_toBottomOf="@+id/img6"
            tools:src="@drawable/img_0" />

        <TextView
            android:id="@+id/tvBestState"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/best_state_is"
            android:layout_marginTop="30dp"
            android:fontFamily="@font/open_sans_semibold"
            android:textSize="14sp"
            android:textColor="@color/white"
            app:layout_constraintStart_toStartOf="@+id/img7"
            app:layout_constraintTop_toBottomOf="@+id/img7" />

        <TextView
            android:id="@+id/tvSolution"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:fontFamily="@font/open_sans_semibold"
            android:textSize="14sp"
            android:textColor="@color/white"
            android:layout_marginStart="5dp"
            app:layout_constraintStart_toEndOf="@+id/tvBestState"
            app:layout_constraintTop_toBottomOf="@+id/img7"
            tools:text="012325164153215" />

        <TextView
            android:id="@+id/tvGenerations"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:textSize="14sp"
            android:fontFamily="@font/open_sans_semibold"
            android:textColor="@color/white"
            android:text="@string/generations_number_is"
            app:layout_constraintStart_toStartOf="@+id/tvBestState"
            app:layout_constraintTop_toBottomOf="@+id/tvBestState" />

        <TextView
            android:id="@+id/tvNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:fontFamily="@font/open_sans_semibold"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:layout_marginStart="5dp"
            app:layout_constraintStart_toEndOf="@+id/tvGenerations"
            app:layout_constraintTop_toBottomOf="@+id/tvSolution"
            tools:text="9" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnContinue"
            android:layout_width="0dp"
            android:layout_height="70dp"
            android:layout_marginHorizontal="25dp"
            android:layout_marginBottom="30dp"
            android:background="@drawable/btn2"
            android:text="@string/do_it_again"
            android:textAllCaps="false"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>